--- a/src/app/bakery/common/form-controls/input-field/input-field.component.html
+++ b/src/app/bakery/common/form-controls/input-field/input-field.component.html
@@ -6,6 +6,7 @@
     <label [for]="data.name">{{data.label}}</label>
     <input
     autocomplete="off"
+    [attr.disabled]="disabled ? '' : null"
     [type]="data.type"
     [maxlength]="data.maxLength"
     [placeholder]="data.placeholder" 
