--- a/src/app/bakery/admin-home/home-actions/add-product-form/add-product-form.componet.html
+++ b/src/app/bakery/admin-home/home-actions/add-product-form/add-product-form.componet.html
@@ -9,6 +9,7 @@
                           name: 'productName',
                           maxLength: 30
                           }"
+                    [disabled]="addingProduct"
                     [showErrors]="showErrors" [parentFormGroup]="addProductForm" [formControlErrorMessage]="formControlErrorMessage">
                 </app-input-field>
             </div>
@@ -27,6 +28,7 @@
                             {label: 'Muffins', value: 'muffins'}
                         ]
                     }"
+                    [disabled]="addingProduct"
                     [showErrors]="showErrors" [parentFormGroup]="addProductForm" [formControlErrorMessage]="formControlErrorMessage">
                 </app-dropdown-list>
             </div>
@@ -40,7 +42,8 @@
                   name: 'productDesc',
                   maxLength: 100
                   }"
-                    [showErrors]="showErrors" [parentFormGroup]="addProductForm" [formControlErrorMessage]="formControlErrorMessage">
+                [disabled]="addingProduct"
+                [showErrors]="showErrors" [parentFormGroup]="addProductForm" [formControlErrorMessage]="formControlErrorMessage">
                 </app-input-field>
             </div>
 
@@ -55,7 +58,8 @@
                   name: 'price',
                   maxLength: 50
                   }"
-                    [showErrors]="showErrors" [parentFormGroup]="addProductForm" [formControlErrorMessage]="formControlErrorMessage">
+                [disabled]="addingProduct"
+                [showErrors]="showErrors" [parentFormGroup]="addProductForm" [formControlErrorMessage]="formControlErrorMessage">
                 </app-input-field>
             </div>
         </div>
@@ -69,6 +73,7 @@
                       name: 'quantity',
                       maxLength: 50
                       }"
+                      [disabled]="addingProduct"
                     [showErrors]="showErrors" [parentFormGroup]="addProductForm" [formControlErrorMessage]="formControlErrorMessage">
                 </app-input-field>
             </div>
@@ -77,12 +82,12 @@
         <br>
         <div class="row">
             <div class="col-md-12">
-                <button class="btn  btn-light" style="width: 100%; height: 45px;" (click)="onAddProductClick()">
-                    <span class="fa fa-user-circle"></span> {{!updateDetails ? 'Add new product' : 'Update product details'}}
+                <button disabled="{{addingProduct || null}}" class="btn  btn-light" style="width: 100%; height: 45px;" (click)="onAddProductClick()">
+                    <span *ngIf="!addingProduct"> <span class="fa fa-user-circle"></span> {{!updateDetails ? 'Add new product' : 'Update product details'}} </span>
+                    <div *ngIf="addingProduct" class="loader" style="height: 25px; width: 25px;display: inline-block;"></div>
                 </button>
             </div>
         </div>
-
     </form>
     <br>
 </div>
@@ -90,9 +95,10 @@
     style="width: 185px; min-height: 180px; margin-top: 25px; margin-left: 20px; border: solid #88888888 0.5px; display: inline-block; padding: 5px">
     <div style="height: 120px;width: 170px">
         <img *ngIf="addProductForm.get('productImage').value" [src]="addProductForm.get('productImage').value" alt="" height="120px" width="170px">
+        <div *ngIf="!addProductForm.get('productImage').value && this.loadImage" class="loader" style="height: 25px; width: 25px;display: inline-block; margin: 40px 80px"></div>
     </div>
     <hr style="margin: 5px">
-    <button class="btn  btn-light" style="width: 100%; height: 35px;">
+    <button disabled="{{addingProduct || null}}" class="btn  btn-light" style="width: 100%; height: 35px;">
         <input type="file" accept=".jpeg,.png,.jpg" (change)="uploadImage($event)" style="height: 25px; width: 150px; position: absolute; z-index: 2; opacity: 0;">
         <span class="fa fa-upload"></span> {{!updateDetails ? 'Upload product image' : 'Change product image'}}
     </button>
