--- a/src/app/bakery/admin-login/admin-login.component.html
+++ b/src/app/bakery/admin-login/admin-login.component.html
@@ -1,4 +1,5 @@
 <div class="login-register-back">
+  FSDFDF
   <div class="login">
 
     <div class="login-form-sec">
@@ -11,14 +12,14 @@
         'dropdown-toggle': true
       }"
           style="float: right;cursor: pointer;" data-toggle="dropdown" (click)="dropdownIsOpen = !dropdownIsOpen"></span>
-        <div class="dropdown-menu dropdown-menu-right">
+        <div class="dropdown-menu dropdown-menu-right" *ngIf="!loginProcessing">
           <a class="dropdown-item" [routerLink]="'/open-admin-account'" (click)="dropdownIsOpen = !dropdownIsOpen"
             style="padding: 5px;">
             <span style="width: 20px" class="fa fa-user-plus"></span> Open account
           </a> <br>
-          <a href="" style="padding: 5px;">
+          <!-- <a href="" style="padding: 5px;">
             <span style="width: 20px" class="fa fa-lock"></span> Forgot password
-          </a>
+          </a> -->
         </div>
       </div>
       <hr>
@@ -32,7 +33,8 @@
             name: 'email',
             maxLength: 40
             }"
-              [showErrors]="showErrors" [parentFormGroup]="loginForm" [formControlErrorMessage]="formControlErrorMessage">
+            [disabled]="loginProcessing"
+            [showErrors]="showErrors" [parentFormGroup]="loginForm" [formControlErrorMessage]="formControlErrorMessage">
             </app-input-field>
           </div>
 
@@ -47,15 +49,18 @@
             name: 'password',
             maxLength: 50
             }"
-              [showErrors]="showErrors" [parentFormGroup]="loginForm" [formControlErrorMessage]="formControlErrorMessage">
+            [disabled]="loginProcessing"
+            [showErrors]="showErrors" [parentFormGroup]="loginForm" [formControlErrorMessage]="formControlErrorMessage">
             </app-input-field>
           </div>
         </div>
         <br>
         <div class="row">
           <div class="col-md-12">
-            <button class="btn  btn-light" style="width: 100%; height: 45px;" (click)="onLoginClick()"> <span class="fa fa-sign-in"></span>
-              Login</button>
+            <button [disabled]="loginProcessing" class="btn  btn-light" style="width: 100%; height: 45px;" (click)="onLoginClick()"> 
+              <span *ngIf="!loginProcessing"> <span class="fa fa-sign-in"></span> Login</span> 
+              <div *ngIf="loginProcessing" class="loader" style="height: 25px; width: 25px;display: inline-block;"></div>
+            </button>
           </div>
         </div>
 
