--- a/src/app/bakery/common/form-controls/dropdown-list/dropdown-list.component.html
+++ b/src/app/bakery/common/form-controls/dropdown-list/dropdown-list.component.html
@@ -4,7 +4,7 @@
 }">
   <!-- <kendo-textbox-container floatingLabel="{{data.label}}"> -->
   <label [for]="data.name">{{data.label}}</label>
-  <select 
+  <select  [attr.disabled]="disabled ? '' : null"
   name="" id="" 
   [formControlName]="data.name"
   (focusout)="onFocusOut()" (focus)="onFocus()">
