--- a/src/styles.css
+++ b/src/styles.css
@@ -33,6 +33,19 @@ body, html {
     margin: auto;
 }
 
+.loader-sm {
+    border: 2px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 2px solid rgb(163, 34, 124);;
+    width: 15px;
+    height: 15px;
+    -webkit-animation: spin 2s linear infinite; /* Safari */
+    animation: spin 1s linear infinite;
+    margin: auto;
+    display: inline-block;
+}
+
+
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
